@@ -1,5 +1,6 @@
 plugins {
     id 'com.github.johnrengelman.shadow' version '6.0.0'
+    id "org.panteleyev.jpackageplugin" version "1.3.0"
     id 'java'
     id 'idea'
     id 'application'
@@ -9,14 +10,44 @@ apply plugin: 'java'
 
 repositories {
     mavenCentral()
-    jcenter()
-    maven {
-        url  "https://dl.bintray.com/jmonkeyengine/org.jmonkeyengine"
-    }
 }
 
 application {
     mainClassName = 'org.wysko.midis2jam2.Launcher'
+}
+
+tasks.jpackage{
+    dependsOn("build")
+
+    appName = "midis2jam2"
+    appVersion = "0.1.0"
+    vendor = "Jacob Wysko"
+    copyright = "Copyright (c) 2021 Jacob Wysko"
+    runtimeImage = System.getProperty("java.home")
+    licenseFile = "LICENSE"
+    input  = "$buildDir/libs"
+    destination = "$buildDir/package/midis2jam2"
+    mainJar = "midis2jam2.jar"
+    mainClass = "org.wysko.midis2jam2.Launcher"
+    javaOptions = ["-Dfile.encoding=UTF-8"].asList()
+
+    // Mac and Linux icon
+    icon = "src/main/resources/icon.png"
+    windows {
+        icon = "src/main/resources/icon.ico"
+    }
+    // Windows specific parameters will be processed only during Windows build
+    winMenu = true // Adds shortcut to Start Menu
+    winDirChooser = true // Allows user to choose install dir
+
+    linuxShortcut = true
+    linuxDebMaintainer = "jacob@wysko.org"
+    linuxRpmLicenseType = "GPLv3"
+    linux {
+        installDir = "/usr" // Linux installation prefix (/usr/bin/app, /usr/lib/app, etc.)
+    }
+
+
 }
 
 dependencies {
@@ -47,7 +78,7 @@ test {
 allprojects {
     gradle.projectsEvaluated {
         tasks.withType(JavaCompile) {
-            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
+            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation" << "--add-exports" << "java.desktop/com.sun.media.sound=ALL-UNNAMED"
         }
     }
 }
